# omnisupport-copilot

./: .dockerignore  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: rag-eval-gate.yml
analytics/: README.md  __init__.py  dbt_project.yml  metric_registry_v1.yml  profiles.yml
analytics/models/: sources.yml
analytics/scripts/: __init__.py  validate_metric_registry.py
analytics/tests/: metric_values_non_negative.sql  no_pii_columns_in_agent_tool_input_view.sql  ratio_metrics_between_0_and_1.sql
contracts/data/: audio_asset_contract.json  chunk_quality_sample.schema.json  doc_asset_contract.json  document_chunk.schema.json  evidence_anchor.schema.json  knowledge_section.schema.json  parse_run.schema.json  ticket_contract.json  video_asset_contract.json
contracts/evals/: eval_dataset.schema.json  eval_report.schema.json
contracts/release/: release_manifest_example.json  release_manifest_schema.json
contracts/run_evidence/: week06_run_evidence.schema.json
contracts/tools/: tool_contract_schema.json
data/canonization/: README.md
data/seed_manifests/: manifest_edge_gateway_pdf_v1.json  manifest_tickets_synthetic_v1.json  manifest_week02_practice_v1.json  (+3 more)
evals/: __init__.py  ab_test.py  calibrate.py  check_regression.py  run_ragas.py
infra/: dagster.Dockerfile  devbox.Dockerfile  docker-compose.yml
pipelines/: __init__.py  definitions.py
runbooks/: ingestion_runbook_v1.md  lakehouse_runbook.md  podman-local.md  week01-startup.md  week06-data-factory.md  week07-unstructured-data.md  week11-evaluation-system.md
(+237 files in other folders)
