[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omnisupport-copilot"
version = "0.1.0"
description = "OmniSupport Copilot — 多模态企业支持知识层 + 工单联动 AI 系统"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "pipelines*"]

# ── 开发依赖 ──────────────────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",        # FastAPI 测试客户端
    "jsonschema>=4.22",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ── Ruff Linter 配置 ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

# ── pytest 配置 ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
